# shadow

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: simulate.rs
src/: main.rs
