[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
async-process = "1.6"
bytesize = "1.1.0"
crossterm = "0.25.0"
futures-lite = "1.12.0"
sysinfo = { version = "0.27", default-features = false }
# TODO swap from full, I'm lazy rn
tokio = { version = "1.23", features = ["full"] }
tui = "0.19.0"
